<resources>
    <string name="app_name">Diagnosis</string>
    <string name="help_translate">Translate Diagnosis</string>
    <string name="crash_toast_text">Sorry, but Diagnosis crashed.</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="checking_database">Checking database</string>
    <string name="press_color_to_apply"></string>
    <string name="down_arrow">↓</string>
    <string name="visit_xda">Visit XDA</string>
    <string name="email_darken">Email darken</string>
    <string name="sortmode">Sortmode</string>
    <string name="no_data_saved_yet">"No data saved yet!
Open the settings and select which data you want to save.
(It may take a few minutes until enough data is gathered)"</string>
    <string name="seen">Seen</string>
    <string name="name">Name</string>
    <string name="please_wait">look.away.!.you.shouldnt.see.me.like.this</string>
    <string name="colorcode_in_hex">Colorcode in Hex</string>
    <string name="style_examples">Style examples (create your own in settings!):</string>
    <string name="welcome_text">"Press \"Start tracking\" to begin!
Check out the settings!
Everything is highly customizable!

If you encounter bugs/problems or have requests, i would be happy if you send me an email(support@thedarken.eu), thanks!"</string>
    <string name="linebuider_welcome">"Drag/Drop the icon up/down to sort.
Dragging the icon right, deletes that item"</string>
    <string name="close">Close</string>
    <string name="is">is</string>
    <string name="your_batteries_health">Your batteries health</string>
    <string name="charge_level_">"Charge level "</string>
    <string name="is_currently">is currently</string>
    <string name="is_on_average">is on average</string>
    <string name="your_batteries_voltage">Your batteries voltage</string>
    <string name="highest_was">highest was</string>
    <string name="lowest_was">lowest was</string>
    <string name="your_battery_is">Your battery is</string>
    <string name="currently">currently</string>
    <string name="the_battery_temperature">The battery temperature</string>
    <string name="was_on_average">was on average</string>
    <string name="was_highest_at">was highest at</string>
    <string name="was_lowest_at">was lowest at</string>
    <string name="active_app_count">Active app count</string>
    <string name="maximum">maximum</string>
    <string name="average_cpu_usage">"Average CPU usage "</string>
    <string name="user">"User "</string>
    <string name="system">"System "</string>
    <string name="memory">Memory</string>
    <string name="average">average</string>
    <string name="observed_cpu_speed">Observed CPU frequencies</string>
    <string name="observed_cpu_usage">Observed average CPU usage</string>
    <string name="average_is">average is</string>
    <string name="lowest_at">lowest at</string>
    <string name="is_max">is max</string>
    <string name="is_min">is min</string>
    <string name="all_latest_rate">[ALL]Latest rate</string>
    <string name="download">download</string>
    <string name="upload">upload</string>
    <string name="all_max_speed_last_3h">[ALL]Max speed (last 3h)</string>
    <string name="all_max_speed_last_24h">[ALL]Max speed (last 24h)</string>
    <string name="all_traffic_last_3h">[ALL]Traffic (last 3h)</string>
    <string name="all_traffic_last_24h">[ALL]Traffic (last 24h)</string>
    <string name="all_traffic_whole_database">[ALL]Traffic (whole database)</string>
    <string name="cell_latest_rate">[CELL]Latest rate</string>
    <string name="cell_max_speed_last_3h">[CELL]Max speed (last 3h)</string>
    <string name="cell_max_speed_last_24h">[CELL]Max speed (last 24h)</string>
    <string name="cell_traffic_last_3h">[CELL]Traffic (last 3h)</string>
    <string name="cell_traffic_last_24h">[CELL]Traffic (last 24h)</string>
    <string name="cell_traffic_whole_database">[CELL]Traffic (whole database)</string>
    <string name="external_sdcard">External sdcard</string>
    <string name="total">total</string>
    <string name="used">used</string>
    <string name="internal_sdcard">Internal sdcard</string>
    <string name="system_partition">System partition</string>
    <string name="data_partition">Data partition</string>
    <string name="wifi_signal">WIFI signal</string>
    <string name="min">min</string>
    <string name="cell_signal">CELL signal</string>
    <string name="max">max</string>
    <string name="ping">"Ping "</string>
    <string name="disk_write">Disk write</string>
    <string name="disk_read">Disk read</string>
    <string name="loading_data_please_wait">Loading data, please wait.</string>
    <string name="cpu_percent">CPU%</string>
    <string name="ram_percent">RAM%</string>
    <string name="loading">Loading...</string>
    <string name="copying_busybox">Copying busybox...</string>
    <string name="getting_busybox_version">Getting busybox version</string>
    <string name="db_deletion_successfull">DB deletion successfull</string>
    <string name="could_not_delete_db">Could not delete DB</string>
    <string name="stopping_service">Stopping service...</string>
    <string name="starting_service">Starting service...</string>
    <string name="cleaning_old_database_entries">Cleaning old database entries</string>
    <string name="diagnosis_changelog">Diagnosis Changelog:</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="busybox_error">BUSYBOX error!</string>
    <string name="busybox_error_explanation">"Could not use our BUSYBOX :-(
To prevent unwanted behavior Diagnosis will close now.
Please try restarting or reinstalling Diagnosis.
Should this not help please write me an email:
(support@thedarken.eu)
Sorry for your troubles!"</string>
    <string name="database_removal">Database removal</string>
    <string name="database_removal_explanation">"This newer version of Diagnosis uses a different structure to store the periodic data.
To avoid errors and unwanted behavior, the previous version has been removed.
I\'m telling you this so that you are not suprised that the database is empty."</string>
    <string name="error">Error</string>
    <string name="sorry_reinstall">Sorry, something went wrong and you will have to reinstall this app.</string>
    <string name="quit">Quit</string>
    <string name="dismiss">Dismiss</string>
    <string name="news">News</string>
    <string name="news_content">"If you want to translate Diagnosis to your native language, send me a mail.

v0.8.0
-Made some small improvements
-Translation and UI changes

v0.7.9
-Fix for 0 output for some of the new infos
-Small tweaks

Have a look at \'Diagnosis Pro\' if you are looking for additional features or want to support my work.

Questions,requests or ideas?
Mail me!"</string>
    <string name="no_market_application_found">No Market Application found.</string>
    <string name="hide">Hide</string>
    <string name="diagnosis_pro">Diagnosis Pro</string>
    <string name="startup_error">Startup ERROR!</string>
    <string name="pro">Pro</string>
    <string name="welcome_to_diagnosis">Welcome to Diagnosis</string>
    <string name="try_a_style">Try one of these styles or visit the settings and create your own.</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="update_interval_is">"Update interval is "</string>
    <string name="loading_database_info">Loading database info</string>
    <string name="database_size">Database size</string>
    <string name="no_db_yet">No DB yet</string>
    <string name="data_set_s_will_be_condensed_into_1">data set(s) will be condensed into 1</string>
    <string name="set_s_are_cached_before_saving_to_database">set(s) are cached before saving to database</string>
    <string name="style">Style</string>
    <string name="set">set</string>
    <string name="sorry_pro_only">Sorry, but this is only available in Diagnosis Pro</string>
    <string name="select_an_info">Select an info</string>
    <string name="diagnosis_service_created">Diagnosis service created</string>
    <string name="we_now_know_whats_going_on">We now know whats going on!</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="click_me_to_open_app">Click me to open the App</string>
    <string name="restored_preset_from_slot">Restored preset from slot</string>
    <string name="preset_saved_to_slot">Preset saved to slot</string>
    <string name="clearing_database">Clearing database</string>
    <string name="database_reset">Database reset</string>
    <string name="sorry_stop_diagnosis">Sorry there was an error, maybe stop Diagnosis?</string>
    <string name="avg">AVG</string>
    <string name="ms">ms</string>
    <string name="all_cores">All cores</string>
    <string name="core">Core</string>
    <string name="io">I/O</string>
    <string name="preferences_interval_dialog_message">3-5 is recommended</string>
    <string name="preferences_interval_dialog_suffix">" seconds"</string>
    <string name="preferences_interval_summary">How often diagnosis should refresh. Faster is more accurate, but consumes more resources. Just try it out, i recommend 3-5s.</string>
    <string name="preferences_interval_title">Update interval</string>
    <string name="preferences_autostart_summary">"Start Diagnosis automaticly after a reboot.
Requires [Diagnosis Pro]"</string>
    <string name="preferences_autostart_title">Autostart</string>
    <string name="preferences_notification_title">Show notification</string>
    <string name="about_help_text">"Diagnosis by darken

Should you have any question, problem or request, just send me an email (support\\@thedarken.eu).

This help guide will cover the basics of Diagnosis.

Some important information about the overlay!
The overlay can hang/lag or even vanish, if other apps need the resources desperately, this is preferred though as we do want to prevent Diagnosis to influence other apps. Don\'t worry, it will fix itself when resources are available again.

Introduction:
Now first things first, if you wish to use the various statistics available within the app you will need to turn database collection on, in order to do this, have a look at the settings.
Please keep in mind this can cause lag on lower end phones and if so you may not want to use this function.
The update interval is how often data is collected (in seconds) and the information overlay is updated. Lower values use more CPU but offer faster updates. A value of 3-5 is usually fine, lower end devices might need to increase this to 9-10 to avoid lag.
The data displayed in the overlay is what will be written to the database too, if you enabled it.

Customization:
The overlay can be customized in various ways, one is what each line displays. Opening the settings you will see an entry called \'Customize lines\' containing Line1/2/3/4, these will determine what each line of the overlay displays. There are alot to choose from and probably more to come with each update, just look through them and find your preferred information.

Advanced settings:
You don\'t really need to change these. The default settings are usually okay.
Update interval is how often Diagnosis will collect data(this will also update overlay),cache size is how much to store into RAM before attempting to write to disk, this defaults at 24, a bigger data density means smaller database file but less accurate information, so with density of 5 and cache at 10 it will cache 10 data sets, condense them into 2 and then write to database.
\"Drop database\" will delete the database, thus freeing the diskspace, but removing the saved data.
Data age limit lets you specificy an amount of hours for which you want to keep the data, any data older than this will be deleted the next time you start the overlay."</string>
</resources>