<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#B2B2B2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg4">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/sortmode"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#000000" />

	        <Spinner
	            android:id="@+id/sortmode"
	            android:layout_width="wrap_content"
	            android:layout_height="40dp"
	            android:entries="@array/sortmode_app"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg4"
                android:id="@+id/nodata"
                android:text="@string/no_data_saved_yet"
                android:textColor="#000000" />
   		    <TableLayout
   		        xmlns:android="http://schemas.android.com/apk/res/android"
   		        android:id="@+id/apps_table"
   		        android:layout_width="match_parent"
   		        android:layout_height="match_parent"
   		        android:background="@drawable/bg4"
   		        android:gravity="center"
   		        android:shrinkColumns="1"
   		        android:stretchColumns="1">

   		        <TableRow
   		            android:layout_width="match_parent"
   		            android:layout_height="wrap_content"
   		            android:gravity="center" >

   		            <TextView
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="@string/seen"
   		                android:textColor="#000000" />

   		            <TextView
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="@string/name"
   		                android:textColor="#000000" />

   		            <TextView
   		                android:id="@+id/cpu_last_apps"
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="@string/cpu_percent"
   		                android:textColor="#000000" />

   		            <TextView
   		                android:id="@+id/cpu_last_apps"
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="@string/ram_percent"
   		                android:textColor="#000000" />
   		        </TableRow>

   		        <TableRow
   		            android:layout_width="match_parent"
   		            android:layout_height="wrap_content"
   		            android:gravity="center">

   		            <TextView
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="73"
   		                android:textColor="#000000" />

   		            <TextView
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="@string/please_wait"
   		                android:textColor="#000000" />

   		            <TextView
   		                android:id="@+id/cpu_last_apps"
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="10%"
   		                android:textColor="#000000" />

   		            <TextView
   		                android:id="@+id/cpu_last_apps"
   		                android:layout_width="match_parent"
   		                android:layout_height="wrap_content"
   		                android:text="28.00%"
   		                android:textColor="#000000" />
   		        </TableRow>
   		    </TableLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>